# 6502-em

./: .gitignore  6502 Instructions.html  6502 Reference.html  6502-em.kdev4  6502test.cpp  CMakeLists.txt  LICENSE  Makefile  README.md  cputest  cputest.cpp  mem.hpp  romgenerator.py
.kdev4/: 6502-em.kdev4
6502include/: cpu.hpp  cpu_6502.hpp  mem.hpp  mem_28c256.hpp
6502src/: cpu.cpp  cpu.hpp  mem.cpp  mem.hpp  mem_28c256.cpp
6502test/: ArithmeticTests.cpp  BranchTests.cpp  IncrementDecrementTests.cpp  LogicalTests.cpp  ShiftTests.cpp  StackTests.cpp  TransferRegisterTests.cpp  cpufunctiontests.cpp  cputest.cpp  loadregistertests.cpp  memoryinstructiontests.cpp
src/: cpu.hpp  main.cpp
